--- a/style.css
+++ b/style.css
@@ -9,23 +9,36 @@ body {
   }
   
   h1 {
+    font-family: 'Roboto Condensed', sans-serif; 
+    font-weight: semi-bold;
     text-align: center;
-    font-size: 64px;
+    font-size: 72px;
   }
   
   h2 {
-    text-align: left;
+    font-family: 'Roboto Condensed', sans-serif; 
+    text-align: center;
     font-size: 30px;
   }
   
   h3{
+    font-family: 'Roboto Condensed', sans-serif; 
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
+  }
+
+  
+
+  .logo {
+    font-family: 'Poiret One', cursive; 
+    color: brown;
+    font-size: 50px;
+    font-weight: 500;
   }
   
   /* Bootstrap styles */
   .album {
-    background-color: rgba(214, 204, 204, 0.8);
+    background-color: rgba(241, 236, 236, 0.897);
 }
 
 .blob-crt {
@@ -143,7 +156,7 @@ body {
     font-size: 20px;
     border: none;
     cursor:pointer;
-    box-shadow: 3px 4px black;
+    box-shadow: 3px 4px rgba(36, 35, 35, 0.548);
   }
   
   .dropbtn:hover, .dropbtn:focus {
