--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* General styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(174, 255, 174);
+    
     background-size: cover;
     
 }
@@ -24,6 +24,7 @@ h3{
     text-align: center;
     font-size: 20px;
 }
+
 
 
 
@@ -138,15 +139,15 @@ h3{
 .themed-grid-col {
   padding-top: .75rem;
   padding-bottom: .75rem;
-  background-color: rgba(112.520718, 44.062154, 249.437846, .15);
-  border: 1px solid rgba(112.520718, 44.062154, 249.437846, .3);
+  background-color: rgba(171, 168, 175, 0.15);
+  border: 1px solid rgba(102, 102, 104, 0.3);
 }
 
 .themed-container {
   padding: .75rem;
   margin-bottom: 1.5rem;
-  background-color: rgba(112.520718, 44.062154, 249.437846, .15);
-  border: 1px solid rgba(112.520718, 44.062154, 249.437846, .3);
+  background-color: rgba(171, 168, 175, 0.15);
+  border: 1px solid rgba(171, 168, 175, 0.3);
 }
   
   /* Home page styles */
