--- a/style.css
+++ b/style.css
@@ -25,8 +25,36 @@ h3{
     font-size: 20px;
 }
 
+p {
+    font-family: 'Roboto Condensed', sans-serif; 
+    text-align: center;
+    font-size: 20px;
+}
+
+ul {
+    font-family: 'Roboto Condensed', sans-serif; 
+    text-align: center;
+    font-size: 20px;
+    
+}
+li {
+  list-style-type: none;
+}
 
 
+.image-container {
+  display: flex;
+  justify-content: center; /* Horizontally center the image and its container */
+  align-items: center; /* Vertically center the image and its container */
+}
+
+
+
+.text-style {
+    font-family: 'Roboto Condensed', sans-serif; 
+    text-align: center;
+    
+}
 
 .nav-pills .nav-link {
   color: brown;
